# OpenVR-Dynamic-Resolution

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SettingsDescription.txt  WorkingGames.md  manifest.vrmanifest  settings.ini  settingsHigh.ini  settingsLow.ini  vcpkg.json
.github/: FUNDING.yml
.github/workflows/: hosted-ninja-vcpkg_submod.yml  ubuntu.yml  vs17.yml
cmake/: FindOpenVR.cmake  gitversion.cmake  version.h.in
resources/: License.txt  ThirdPartyLicenses.txt  manifest.vrmanifest  settings.ini
src/: main.cpp  pathtools_excerpt.cpp  pathtools_excerpt.h  setup.cpp  setup.hpp  tray.h  tray_windows.c
